fixed cutting off issue on front page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,7 +23,6 @@ body{
 
 .container{
 	width:100%;
-	overflow:hidden;
 	min-height: 700px;
 }
 
